--- a/PortfolioGL.html
+++ b/PortfolioGL.html
@@ -33,34 +33,51 @@
                             <details open='true'>
                                 <summary>
                                     <p class="clickable">
-                                        >> 🎼 Music
-                                    </p>
-                                </summary>
-                                <ul>
-                                    <li>
-                                        <p>Here's a quick showreel of some compositions from the first half of 2025.</p>
-                                        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9PrqOjk1mJU?si=V6Q2lRk4UFxpZs0C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
-                                    </li>
-                                </ul>
-                            </details>
-                        </li>
-                        <li>
-                            <details open='true'>
-                                <summary>
-                                    <p class="clickable">
-                                        >> 🍕 Dungeon Pizza Sound Design
+                                        >> 🔉 Sound Design Walkthrough
                                     </p>   
                                 </summary>
                                 <ul>
                                     <li>
                                         <p>
-                                            Dungeon Pizza is currently in development. As the team's sole audio designer, I'm creating music and sound design, as well as all implementation.
+                                            A video highlighting some sound design & the techniques involved from a couple of recent projects. 
+                                        </p>
+                                        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/z4L5c9g_a9g?si=_58ksfk5TftSxZCC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></iframe></p>
+                                    </li>
+                                </ul>
+                            </details>
+                        </li> 
+                        <li>
+                            <details open='true'>
+                                <summary>
+                                    <p class="clickable">
+                                        >> 🍕 Dungeon Pizza Sound Design Playthrough
+                                    </p>   
+                                </summary>
+                                <ul>
+                                    <li>
+                                        <p>
+                                            Dungeon Pizza is currently in development. As the team's sole audio designer, I'm creating music and sound design, as well as all implementation. This video is raw gameplay to hear the game in action.
                                         </p>
                                         <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/oFmAYS4Qb0w?si=nvnnAUD2F_40su-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
                                     </li>
                                 </ul>
                             </details>
                         </li> 
+                        <li>
+                            <details open='true'>
+                                <summary>
+                                    <p class="clickable">
+                                        >> 🎼 Music
+                                    </p>
+                                </summary>
+                                <ul>
+                                    <li>
+                                        <p>I'm aware that this role is for sound design only, but here are some pieces of music I've made if that is something you'd like to hear.</p>
+                                        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9PrqOjk1mJU?si=V6Q2lRk4UFxpZs0C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+                                    </li>
+                                </ul>
+                            </details>
+                        </li>
                     </ul>
                 </details>  
                 <footer><p>// code by me :) // (c) Oscar Jemmott, 2025 //</p></footer>
